# labs-regex-map-json-sm

./: .gitignore  Cargo.toml  README.md  SmartModule.toml
src/: lib.rs
test-data/: input.json  transform.yaml
