[package]
name = "regex-map-json"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Regex JSON transformations SmartModule"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.5.1"

once_cell = { version = "1.17.1", default-features = false }
eyre = { version = "0.6.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
regex = {version = "1.8", default-features = false, features = ["std", "unicode"] }


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
